AntonPutra/debug_Ingress/01_HTTP/03_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
  - port: 8080
    targetPort: http #insted of 8080 we will provide port name
