AntonPutra/debug_Ingress/01_HTTP/04_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annontations:
    cert-manager.io/cluster-issuer: http-production
spec:
  ingressClassName: external-nginx
  rules:
  - host: app.vishnuthejabhadri.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-service
            port: 
              number: 8080
  tls:
    - hosts:
        - app.vishnuthejabhadri.xyz
      secretName: app-vishnuthejabhadri-xyz
